--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,19 @@ server.port=80
 
 info.app.name=Kreinto Toolbox
 
-spring.security.user.name=nico
+spring.security.user.name=nico@nico.n
 spring.security.user.password=password
 
 management.endpoints.web.exposure.include.=*
 
 spring.main.allow-bean-definition-overriding=true
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
